# rushfind

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: macos-cross-check-config.toml
ci/: gnu-findutils-source.env
doc/: rfd.1  rfd.1.scd
docs/: development.md  rfd.1  rfd.1.scd
scripts/: bench_parallel_engine.sh  bench_regex_stage.sh  check_generic_unix_target_builds.sh  check_unix_portability_surface.sh  cleanup_perf_smoke.sh  create_parallel_bench_fixture.sh  create_regex_bench_fixture.sh  generate_manpage.sh  zig-cc-macos-wrapper.sh
src/: account.rs  action_output.rs  args.rs  ast.rs  birth.rs  cli.rs  ctype.rs  diagnostics.rs  entry.rs  eval.rs  exec.rs  file_flags.rs  file_output.rs  follow.rs  identity.rs  lib.rs  literal_time.rs  ls.rs  main.rs  messages_locale.rs  metadata_format.rs  mounts.rs  numeric.rs  optimizer.rs  output.rs  parser.rs  pattern.rs  perm.rs  planner.rs  printf.rs  printf_time.rs  regex_match.rs  runner.rs  runtime_pipeline.rs  runtime_policy.rs  size.rs  time.rs  traversal_control.rs  version.rs  walker.rs
tests/: ctype_class.rs  ctype_profile.rs  ctype_text.rs  delete_cli.rs  eval_family_a.rs  eval_flags.rs  eval_follow_mode.rs  eval_metadata_ownership.rs  eval_perm.rs  eval_read_only_tail.rs  eval_regex.rs  eval_size_time.rs  eval_subset.rs  eval_symlink_content.rs  exec_cli.rs  file_identity.rs  files0_from_cli.rs  follow_mode_cli.rs  follow_mode_loops_cli.rs  follow_mode_loops_parallel.rs  follow_mode_parallel.rs  fprint_cli.rs  gnu_differential.rs  gnu_differential_lc_ctype.rs  gnu_differential_path_bytes.rs  gnu_differential_regex_bytes.rs  ls_cli.rs  manpage_docs.rs  normal_options_cli.rs  ordered_cli.rs  (+64 more)
(+61 files in other folders)
