[package]
name = "rushfind"
version = "0.1.0"
edition = "2024"
description = "Fast Rust implementation of Unix find with GNU-compatible syntax and parallel traversal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chitao1234/rushfind"
readme = "README.md"
keywords = ["find", "cli", "filesystem", "search"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rfd"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
libc = "0.2"
pcre2 = "0.2.11"
regex = "1.12"
tempfile = "3.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wait-timeout = "0.2"
