[package]
name = "rushfind"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast Rust implementation of Unix find with GNU-compatible syntax and parallel traversal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chitao1234/rushfind"
readme = "README.md"
keywords = ["find", "cli", "filesystem", "search"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "rfd"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
libc = "0.2"
pcre2 = "0.2.11"
regex = "1.12"
tempfile = "3.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Time",
  "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wait-timeout = "0.2"
